# P5

./: README.md  generico.lab  guitar.lab  plano.lab  seno_tremolo.lab
src/: meson.build
src/instruments/: generico.cpp  generico.h  guitar.cpp  guitar.h  instrument.cpp  plano.cpp  plano.h  seno.cpp  seno.h  sinte_basoon.cpp  sinte_basoon.h  sinte_campana.cpp  sinte_campana.h  sinte_clarinete.cpp  sinte_clarinete.h  sinte_drums.cpp  sinte_drums.h  sinte_metal.cpp  sinte_metal.h  sintesisfm.cpp  sintesisfm.h  vibratoFM.cpp  vibratoFM.h
src/synth/: envelope_adsr.cpp
work/: doremi2.sco  generico.orc  guitar.orc  plano.orc  plot.py  vibratoFM.orc  vibratofm.orc
work/music/: Lennon.orc  ToyStory.orc
